--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JtjarksDe</title>
+  <title>jtjarks.de</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+
+<app-root></app-root>
+
+<footer class="border-top footer text-muted">
+  <div class="container">
+      &copy; 2020 - Janno Tjarks - <a href="/Impressum">Impressum</a> - <a href="/Datenschutz">Datenschutzerkl&auml;rung</a>
+  </div>
+</footer>
 </body>
 </html>
